Avoid overflowing lines in BNF.

--- a/14882.css
+++ b/14882.css
@@ -199,7 +199,8 @@ div.itemdescr {
 	font-family: Arial;
 	font-size: 14px;
 	font-style: italic;
-	margin-left: 30pt;
+	margin-left: 25pt;
+	margin-right: -15mm;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 	text-indent: -3em;
@@ -209,21 +210,7 @@ div.itemdescr {
 
 div.bnf span.texttt { font-family: Courier New; font-size: 9pt; font-style: normal; }
 
-.ncbnf {
-	font-family: Arial;
-	font-size: 14px;
-	font-style: italic;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-	margin-left: 30pt;
-	text-indent: -3em;
-	padding-left: 3em;
-	line-height: 1.4;
-}
-
-div.ncbnf span.texttt { font-family: Courier New; font-size: 9pt; font-style: normal; }
-
-.ncrebnf {
+.rebnf {
 	font-family: Times New Roman;
 	font-style: italic;
 	margin-top: 0.5em;
@@ -234,9 +221,10 @@ div.ncbnf span.texttt { font-family: Courier New; font-size: 9pt; font-style: no
 	line-height: 1.4;
 }
 
-.ncsimplebnf {
+.simplebnf {
 	font-family: Times New Roman;
 	font-style: italic;
+	font-size: 11pt;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 	margin-left: 30pt;
@@ -251,13 +239,6 @@ span.textnormal {
 }
 
 .bnf span.textnormal {
-	font-style: normal;
-	font-family: Times New Roman;
-	font-size: 11pt;
-	white-space: normal;
-}
-
-.ncbnf span.textnormal {
 	font-style: normal;
 	font-family: Times New Roman;
 	font-size: 11pt;
@@ -291,11 +272,11 @@ span.textbf { font-weight: bold; }
 span.textsf { font-family: Arial; font-size: 15px; }
 div.footnote span.textsf { font-family: Arial; font-size: 11px; }
 .bnf span.textsf { font-family: Arial; font-size: 14px; }
-.ncbnf span.textsf { font-family: Arial; font-size: 14px; }
+.simplebnf span.textsf { font-family: Arial; font-size: 14px; }
 .example span.textsf { font-family: Arial; font-size: 14px; }
 span.textsc { font-variant: small-caps; }
 span.nontermdef { font-style: italic; font-family: Arial; font-size: 15px; }
-.ncrebnf a.nontermdef { font-style: italic; font-family: Times New Roman; }
+.rebnf a.nontermdef { font-style: italic; font-family: Times New Roman; }
 span.emph { font-style: italic; }
 span.techterm { font-style: italic; }
 span.mathit { font-style: italic; }
